--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,4 +67,8 @@ html {
 body {
   background-color: var(--color-default-background);
   color: var(--color-default-foreground);
+
+  > * {
+    padding-inline: var(--full-width-padding-inline);
+  }
 }
