--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,6 +60,10 @@ a {
   text-decoration: none;
 }
 
+p {
+  color: var(--color-gray-80);
+}
+
 html {
   color-scheme: dark;
 }
@@ -68,7 +72,19 @@ body {
   background-color: var(--color-default-background);
   color: var(--color-default-foreground);
 
+  display: grid;
+  grid-template-rows: auto 1fr auto auto;
+
+  min-block-size: 100vh;
+  min-block-size: 100dvh;
+
   > * {
     padding-inline: var(--full-width-padding-inline);
+  }
+
+  .tagline {
+    background-color: var(--color-gray-16);
+    padding-block: 1rem;
+    text-align: center;
   }
 }
