--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -31,9 +31,10 @@
         justify-content: start;
       }
 
-      > div {
-        font-size: 1.5rem;
-        font-weight: 800;
+      > a {
+        > svg {
+          font-size: 2.5em;
+        }
       }
     }
 
