--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -11,11 +11,7 @@
     align-items: center;
     gap: 1rem;
 
-    font-size: 2.5rem;
-
-    > svg {
-      font-size: 1.25em;
-    }
+    font-size: var(--fz-700);
   }
 
   .history {
@@ -25,7 +21,7 @@
     gap: 1rem;
 
     .title {
-      font-size: 0.875rem;
+      font-size: var(--fz-300);
     }
 
     > ul {
@@ -33,7 +29,7 @@
       align-items: center;
       gap: 1rem;
 
-      font-size: 0.75rem;
+      font-size: var(--fz-200);
 
       > li {
         background-color: var(--color-gray-20);
