--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -4,7 +4,9 @@
   align-content: center;
   gap: 2rem;
 
-  min-block-size: 100%;
+  grid-template-columns: minmax(0, 1fr);
+
+  margin-bottom: 1rem;
 
   > h1 {
     display: inline-flex;
@@ -20,12 +22,15 @@
     align-items: center;
     gap: 1rem;
 
+    inline-size: min(50rem, 100%);
+
     .title {
       font-size: var(--fz-300);
     }
 
     > ul {
       display: flex;
+      flex-wrap: wrap;
       align-items: center;
       gap: 1rem;
 
