--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,11 +13,16 @@
   --color-default-background: var(--color-gray-10);
   --color-default-foreground: var(--color-gray-98);
 
-  --color-primary: hsl(335deg 71% 64%);
-  --color-primary-fade: hsl(335deg 71% 94%);
-  --color-primary-lighter: hsl(335deg 71% 68%);
-  --color-primary-darker: hsl(335deg 71% 60%);
+  --color-primary: hsl(338deg 75% 62%);
+  --color-primary-fade: hsl(338deg 75% 94%);
+  --color-primary-lighter: hsl(338deg 75% 66%);
+  --color-primary-darker: hsl(338deg 75% 58%);
   --color-primary-opposite: var(--color-gray-10);
+
+  --color-secondary: hsl(188deg 36% 70%);
+  --color-secondary-fade: hsl(188deg 36% 94%);
+  --color-secondary-lighter: hsl(188deg 36% 74%);
+  --color-secondary-darker: hsl(188deg 36% 66%);
 
   --border-radius: 0.875rem;
 
@@ -66,6 +71,7 @@ p {
 
 html {
   color-scheme: dark;
+  scroll-behavior: smooth;
 }
 
 body {
