--- a/src/app/not-found.module.css
+++ b/src/app/not-found.module.css
@@ -4,19 +4,12 @@
   place-content: center;
   row-gap: 1rem;
 
-  @media screen and (min-width: 768px) {
-    grid-template-areas: "writings cta" "visuals visuals";
-    column-gap: 1rem;
-  }
-
   min-block-size: 100%;
 
   .writings {
     grid-area: writings;
 
-    @media screen and (max-width: 767px) {
-      text-align: center;
-    }
+    text-align: center;
 
     h1 {
       font-size: var(--fz-700);
@@ -61,6 +54,17 @@
 
     img {
       inline-size: 100%;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .not-found {
+    grid-template-areas: "writings cta" "visuals visuals";
+    column-gap: 1rem;
+
+    .writings {
+      text-align: initial;
     }
   }
 }
