--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -4,22 +4,12 @@
 
   display: grid;
   grid-template-areas: "branding" "socials" "copy";
-  column-gap: 1rem;
   row-gap: 2rem;
-
-  @media screen and (min-width: 768px) {
-    grid-template-areas: "branding socials" "copy copy";
-  }
 
   .branding {
     grid-area: branding;
 
-    margin-bottom: 1rem;
     text-align: center;
-
-    @media screen and (min-width: 768px) {
-      text-align: right;
-    }
 
     .logo {
       display: flex;
@@ -29,10 +19,6 @@
 
       font-size: var(--fz-500);
       font-weight: 800;
-
-      @media screen and (min-width: 768px) {
-        justify-content: start;
-      }
 
       > a {
         > svg {
@@ -49,13 +35,12 @@
   .socials {
     grid-area: socials;
 
-    margin-inline: auto;
-    margin-bottom: 1rem;
+    justify-self: center;
 
     .certificate {
       display: flex;
       gap: 1.5rem;
-      margin-bottom: 1rem;
+      margin-block-end: 1rem;
     }
 
     .icons {
@@ -74,6 +59,21 @@
       padding: 0 0.25rem;
       &:hover {
         color: var(--color-primary);
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer {
+    grid-template-areas: "branding socials" "copy copy";
+    column-gap: 1rem;
+
+    .branding {
+      text-align: right;
+
+      .logo {
+        justify-content: start;
       }
     }
   }
