--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -41,6 +41,14 @@
       display: flex;
       gap: 1.5rem;
       margin-block-end: 1rem;
+
+      li {
+        a {
+          svg {
+            font-size: var(--fz-700);
+          }
+        }
+      }
     }
 
     .icons {
