--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,14 +1,14 @@
 :root {
-  --color-gray-98: hsl(0deg 0% 98%);
-  --color-gray-90: hsl(0deg 0% 90%);
-  --color-gray-80: hsl(0deg 0% 80%);
-  --color-gray-70: hsl(0deg 0% 70%);
-  --color-gray-40: hsl(0deg 0% 40%);
-  --color-gray-30: hsl(0deg 0% 30%);
-  --color-gray-20: hsl(0deg 0% 20%);
-  --color-gray-16: hsl(0deg 0% 16%);
-  --color-gray-12: hsl(0deg 0% 12%);
-  --color-gray-10: hsl(0deg 0% 10%);
+  --color-gray-10: hsl(0deg 0% 98%);
+  --color-gray-12: hsl(0deg 0% 90%);
+  --color-gray-16: hsl(0deg 0% 80%);
+  --color-gray-20: hsl(0deg 0% 70%);
+  --color-gray-30: hsl(0deg 0% 40%);
+  --color-gray-40: hsl(0deg 0% 30%);
+  --color-gray-70: hsl(0deg 0% 20%);
+  --color-gray-80: hsl(0deg 0% 16%);
+  --color-gray-90: hsl(0deg 0% 12%);
+  --color-gray-98: hsl(0deg 0% 10%);
 
   --color-default-background: var(--color-gray-10);
   --color-default-foreground: var(--color-gray-98);
@@ -32,6 +32,61 @@
   --animation-duration-fast: 0.1s;
   --animation-duration-normal: 0.5s;
   --animation-duration-slow: 1s;
+}
+
+:root.dark-theme {
+  --color-gray-98: hsl(0deg 0% 98%);
+  --color-gray-90: hsl(0deg 0% 90%);
+  --color-gray-80: hsl(0deg 0% 80%);
+  --color-gray-70: hsl(0deg 0% 70%);
+  --color-gray-40: hsl(0deg 0% 40%);
+  --color-gray-30: hsl(0deg 0% 30%);
+  --color-gray-20: hsl(0deg 0% 20%);
+  --color-gray-16: hsl(0deg 0% 16%);
+  --color-gray-12: hsl(0deg 0% 12%);
+  --color-gray-10: hsl(0deg 0% 10%);
+
+  --color-default-background: var(--color-gray-10);
+  --color-default-foreground: var(--color-gray-98);
+
+  --color-primary-opposite: var(--color-gray-98);
+}
+
+@media (prefers-color-scheme: dark) {
+  /* defaults to dark theme */
+  :root {
+    --color-gray-98: hsl(0deg 0% 98%);
+    --color-gray-90: hsl(0deg 0% 90%);
+    --color-gray-80: hsl(0deg 0% 80%);
+    --color-gray-70: hsl(0deg 0% 70%);
+    --color-gray-40: hsl(0deg 0% 40%);
+    --color-gray-30: hsl(0deg 0% 30%);
+    --color-gray-20: hsl(0deg 0% 20%);
+    --color-gray-16: hsl(0deg 0% 16%);
+    --color-gray-12: hsl(0deg 0% 12%);
+    --color-gray-10: hsl(0deg 0% 10%);
+
+    --color-default-background: var(--color-gray-10);
+    --color-default-foreground: var(--color-gray-98);
+
+    --color-primary-opposite: var(--color-gray-98);
+  }
+
+  :root.light-theme {
+    --color-gray-10: hsl(0deg 0% 98%);
+    --color-gray-12: hsl(0deg 0% 90%);
+    --color-gray-16: hsl(0deg 0% 80%);
+    --color-gray-20: hsl(0deg 0% 70%);
+    --color-gray-30: hsl(0deg 0% 40%);
+    --color-gray-40: hsl(0deg 0% 30%);
+    --color-gray-70: hsl(0deg 0% 20%);
+    --color-gray-80: hsl(0deg 0% 16%);
+    --color-gray-90: hsl(0deg 0% 12%);
+    --color-gray-98: hsl(0deg 0% 10%);
+
+    --color-default-background: var(--color-gray-10);
+    --color-default-foreground: var(--color-gray-98);
+  }
 }
 
 *,
@@ -70,7 +125,7 @@ p {
 }
 
 html {
-  color-scheme: dark;
+  color-scheme: light dark;
   scroll-behavior: smooth;
 }
 
