--- a/src/components/global-search-box/global-search-box.module.css
+++ b/src/components/global-search-box/global-search-box.module.css
@@ -43,6 +43,7 @@
       gap: 0.25rem;
 
       background-color: transparent;
+      color: var(--color-gray-98);
       padding: 0.5em 0.5rem 0.5rem 1rem;
 
       border: none;
