--- a/src/app/search/search.module.css
+++ b/src/app/search/search.module.css
@@ -1,8 +1,7 @@
 .search {
   display: grid;
-  grid-template-columns: 1fr 4fr;
-  column-gap: 1rem;
-  align-items: start;
+  gap: 1rem;
+  align-items: start; /* items won`t get stretched all the way down */
 
   margin-block: 2rem;
 
@@ -14,81 +13,23 @@
   }
 
   .result {
-    display: grid;
-    align-content: start;
-    grid-template-columns: repeat(3, minmax(5rem, auto));
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 2rem;
 
-    .card {
-      background-color: var(--color-gray-30);
-
-      border-radius: var(--border-radius);
-      aspect-ratio: 1/1;
-
-      .visuals {
-        display: grid;
-        justify-items: end;
-
-        block-size: min(16rem, 100%);
-
-        border-top-right-radius: var(--border-radius);
-        border-top-left-radius: var(--border-radius);
-
-        position: relative;
-        overflow: hidden;
-
-        > img {
-          grid-column: 1;
-          grid-row: 1;
-
-          block-size: 100%;
-          inline-size: 100%;
-
-          object-fit: cover;
-        }
-
-        .badge {
-          grid-column: 1;
-          grid-row: 1;
-
-          background-color: var(--color-gray-30);
-
-          block-size: max-content;
-
-          padding: 0.25rem 1rem;
-          margin: 0.5rem;
-
-          font-size: var(--fz-300);
-          border-radius: 999px;
-        }
-
-        .gradient {
-          grid-column: 1;
-          grid-row: 1;
-
-          block-size: 100%;
-
-          background: var(--color-primary-darker);
-        }
-      }
-
-      .writings {
-        display: grid;
-        row-gap: 0.5rem;
-
-        padding: 1.5rem 1rem;
-
-        .title {
-          font-size: var(--fz-400);
-          white-space: nowrap;
-          text-overflow: ellipsis;
-          overflow: hidden;
-        }
-
-        > p {
-          font-size: var(--fz-200);
-        }
-      }
+    > * {
+      flex-basis: 17rem;
+      flex-grow: 1;
     }
+
+    .card {
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .search {
+    grid-template-columns: 1fr 4fr;
   }
 }
