--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -27,12 +27,15 @@
     margin-inline-start: auto;
     padding: 0.5rem 1rem;
 
-    border: 1px solid currentColor;
+    border: 1px solid var(--color-primary);
     border-radius: var(--border-radius);
 
     font-weight: 700;
 
     cursor: pointer;
+    transition:
+      var(--animation-duration-normal) background-color,
+      color ease-in-out;
 
     &:hover {
       background-color: var(--color-primary);
