--- a/src/app/search/search.module.css
+++ b/src/app/search/search.module.css
@@ -6,10 +6,17 @@
   margin-block: 2rem;
 
   .filters {
-    border-radius: var(--border-radius);
+    display: grid;
 
-    padding: 0.75rem;
-    background-color: var(--color-gray-20);
+    .buttons {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem;
+
+      > * {
+        flex: 1 0 auto;
+      }
+    }
   }
 
   .result {
@@ -21,9 +28,6 @@
     > * {
       flex-basis: 12rem;
       flex-grow: 1;
-    }
-
-    .card {
     }
   }
 }
