--- a/src/app/search/components/city-filter/city-filter.module.css
+++ b/src/app/search/components/city-filter/city-filter.module.css
@@ -10,10 +10,11 @@
 
     > li {
       background-color: transparent;
+      color: var(--color-gray-80);
 
       padding: 0.75rem 0.5rem;
 
-      border-block-end: 1px solid var(--color-gray-40);
+      border-block-end: 1px solid var(--color-border);
 
       cursor: pointer;
       transition:
