--- a/src/app/search/components/event-type-filter/event-type-filter.module.css
+++ b/src/app/search/components/event-type-filter/event-type-filter.module.css
@@ -14,32 +14,32 @@
       font-size: var(--fz-300);
 
       background-color: transparent;
-      color: var(--color-primary);
+      color: var(--color-primary-darker);
 
       display: grid;
       place-content: center;
 
       padding: 0.5rem 1rem;
 
-      border: 1px solid currentColor;
-      border-radius: var(--border-radius);
+      border: 1px solid var(--color-primary-darker);
+      border-radius: 999px;
 
       cursor: pointer;
       transition:
         var(--animation-duration-normal) background-color,
         color ease-in-out;
 
-      &:hover {
-        background-color: var(--color-primary-fade);
-        color: var(--color-gray-16);
+      @media (prefers-color-scheme: light) {
+        box-shadow: var(--shadow-400);
+      }
 
-        border: 1px solid var(--color-primary-fade);
+      &:hover {
+        background-color: var(--color-primary-darker);
+        color: var(--color-primary-opposite);
       }
       &.active {
         background-color: var(--color-primary);
         color: var(--color-primary-opposite);
-
-        border: 1px solid var(--color-primary);
       }
     }
   }
