--- a/src/app/search/search.module.css
+++ b/src/app/search/search.module.css
@@ -31,7 +31,7 @@
 
       padding: 0.5rem 1rem;
 
-      border: 1px solid currentColor;
+      border: 1px solid var(--color-border);
       border-radius: 999px;
 
       cursor: pointer;
