--- a/src/components/event-card/event-card.module.css
+++ b/src/components/event-card/event-card.module.css
@@ -1,8 +1,12 @@
 .event-card {
-  background-color: var(--color-gray-30);
+  background-color: var(--color-gray-40);
 
   border-radius: var(--border-radius);
   aspect-ratio: 1/1;
+
+  @media (prefers-color-scheme: light) {
+    box-shadow: var(--shadow-700);
+  }
 
   .visuals {
     display: grid;
@@ -28,15 +32,20 @@
       grid-row: 1;
       justify-self: end;
 
-      background-color: var(--color-gray-30);
+      background-color: hsl(338deg 10% 80%);
+      color: var(--color-black);
+      /*background-color: var(--color-gray-80);*/
+      /*color: var(--color-gray-16);*/
 
       block-size: max-content;
 
       padding: 0.25rem 1rem;
-      margin: 0.5rem;
+      /*margin: 0.375rem;*/
 
       font-size: var(--fz-300);
-      border-radius: 999px;
+      /*border-radius: 999px;*/
+      border-top-left-radius: var(--border-radius);
+      border-bottom-right-radius: var(--border-radius);
 
       z-index: 1;
     }
@@ -98,7 +107,7 @@
       align-items: center;
       gap: 0.5rem;
 
-      background-color: var(--color-gray-98);
+      background-color: var(--color-gray-93);
       color: var(--color-gray-16);
 
       border: none;
@@ -114,7 +123,7 @@
       &:hover,
       &:focus {
         background-color: var(--color-primary-darker);
-        color: var(--color-gray-98);
+        color: var(--color-primary-opposite);
       }
     }
   }
