--- a/src/components/filter-card/filter-card.module.css
+++ b/src/components/filter-card/filter-card.module.css
@@ -3,4 +3,8 @@
 
   padding: 1rem;
   background-color: var(--color-gray-20);
+
+  @media (prefers-color-scheme: light) {
+    box-shadow: var(--shadow-700);
+  }
 }
