--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: var(--color-gray-12);
+  background-color: var(--color-surface-300);
   padding-block: 1rem;
 
   display: grid;
