--- a/src/components/global-search-box/global-search-box.module.css
+++ b/src/components/global-search-box/global-search-box.module.css
@@ -4,7 +4,7 @@
   gap: 0.5rem;
   inline-size: min(50rem, 100%);
 
-  border: 1px solid var(--color-gray-20);
+  border: 1px solid var(--color-border);
   border-radius: 999rem;
 
   padding-inline: 1rem;
@@ -19,6 +19,7 @@
     flex: 1 1 0;
 
     background-color: transparent;
+    color: var(--color-gray-97);
 
     padding: 1rem;
     border: none;
@@ -32,7 +33,7 @@
   }
 
   .divider {
-    background-color: var(--color-gray-20);
+    background-color: var(--color-border);
     block-size: 2em;
     inline-size: 1px;
   }
@@ -43,7 +44,7 @@
       gap: 0.25rem;
 
       background-color: transparent;
-      color: var(--color-gray-98);
+      color: var(--color-gray-99);
       padding: 0.5em 0.5rem 0.5rem 1rem;
 
       border: none;
