--- a/src/app/search/search.module.css
+++ b/src/app/search/search.module.css
@@ -1,6 +1,6 @@
 .page {
   display: grid;
-  grid-template-areas: "search" "mobile-filters" "result";
+  grid-template-areas: "search" "mobile-filters" "toolbar" "result";
   gap: 1rem;
   align-items: start; /* items won`t get stretched all the way down */
 
@@ -56,6 +56,15 @@
     display: none;
   }
 
+  .toolbar {
+    grid-area: toolbar;
+
+    display: flex;
+    flex-direction: row-reverse;
+    .stats {
+    }
+  }
+
   .result {
     grid-area: result;
     display: grid;
@@ -68,7 +77,7 @@
 @media screen and (min-width: 768px) {
   .page {
     grid-template-columns: 1fr 4fr;
-    grid-template-areas: "search search" "filters result";
+    grid-template-areas: "search search" "filters toolbar" "filters result";
 
     .mobile-filters {
       display: none;
