--- a/src/app/search/components/result/result.module.css
+++ b/src/app/search/components/result/result.module.css
@@ -1,2 +1,7 @@
 .result {
+  grid-area: result;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
+  justify-content: center;
+  gap: 2rem;
 }
