--- a/src/components/activity-card/activity-card.module.css
+++ b/src/components/activity-card/activity-card.module.css
@@ -1,19 +1,17 @@
-.event-card {
+.activity-card {
   background-color: var(--color-gray-40);
 
   border-radius: var(--border-radius);
   aspect-ratio: 1/1;
 
-  @media (prefers-color-scheme: light) {
-    box-shadow: var(--shadow-700);
-  }
+  box-shadow: var(--shadow-700);
 
   .visuals {
     display: grid;
     aspect-ratio: 1/1;
 
-    border-top-right-radius: var(--border-radius);
-    border-top-left-radius: var(--border-radius);
+    border-start-start-radius: var(--border-radius);
+    border-start-end-radius: var(--border-radius);
 
     overflow: hidden;
 
@@ -34,23 +32,19 @@
 
       background-color: hsl(338deg 10% 80%);
       color: var(--color-black);
-      /*background-color: var(--color-gray-80);*/
-      /*color: var(--color-gray-16);*/
 
       block-size: max-content;
 
       padding: 0.25rem 1rem;
-      /*margin: 0.375rem;*/
 
       font-size: var(--fz-300);
-      /*border-radius: 999px;*/
       border-top-left-radius: var(--border-radius);
       border-bottom-right-radius: var(--border-radius);
 
       z-index: 1;
     }
 
-    .gradient {
+    .overlay {
       grid-column: 1;
       grid-row: 1;
 
@@ -58,11 +52,11 @@
 
       background: linear-gradient(
         to bottom,
-        rgba(41, 41, 41, 0.66),
-        rgba(31, 31, 31, 0),
-        rgba(31, 31, 31, 0),
-        rgba(31, 31, 31, 0),
-        rgba(41, 41, 41, 0.78)
+        hsla(0, 0%, 16%, 0.66),
+        hsla(0, 0%, 12%, 0),
+        hsla(0, 0%, 12%, 0),
+        hsla(0, 0%, 12%, 0),
+        hsla(0, 0%, 16%, 0.78)
       );
     }
   }
