--- a/src/components/select/select.module.css
+++ b/src/components/select/select.module.css
@@ -31,7 +31,7 @@
   }
 
   .options {
-    background-color: var(--color-default-background);
+    background-color: var(--color-surface-400);
     /*box-shadow: var(--shadow-400);*/
 
     position: absolute;
@@ -53,7 +53,7 @@
       cursor: pointer;
 
       &.highlighted {
-        background-color: var(--color-default-background);
+        background-color: var(--color-surface-400);
       }
 
       &.selected {
@@ -79,7 +79,7 @@
   }
 
   &.floating {
-    background-color: var(--color-default-background);
+    background-color: var(--color-surface-400);
     /*box-shadow: var(--shadow-400);*/
 
     &:not(&:focus, &.open) {
