--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   align-items: center;
-  gap: 2rem;
+  gap: 1rem;
   padding-block: 1rem;
 
   nav {
@@ -27,12 +27,14 @@
     margin-inline-start: auto;
     padding: 0.5rem 1rem;
 
-    border: 1px solid currentColor;
+    border: 1px solid var(--color-primary);
     border-radius: var(--border-radius);
 
     font-weight: 700;
 
     cursor: pointer;
+    transition: var(--animation-duration-fast) ease-in-out;
+    transition-property: background-color, color;
 
     &:hover {
       background-color: var(--color-primary);
