[ADD] activity detail page

--- a/src/components/activity-card/activity-card.module.css
+++ b/src/components/activity-card/activity-card.module.css
@@ -95,7 +95,7 @@
 
     padding: 0.25rem 1rem 1rem;
 
-    button {
+    a {
       display: flex;
       justify-content: center;
       align-items: center;
