--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -37,7 +37,7 @@
       font-size: var(--fz-200);
 
       > li {
-        background-color: var(--color-gray-20);
+        background-color: var(--color-zinc-200);
         padding: 0.25rem 0.75rem;
         border-radius: 999rem;
         cursor: pointer;
