--- a/src/app/search/components/activity-type-filter/activity-type-filter.module.css
+++ b/src/app/search/components/activity-type-filter/activity-type-filter.module.css
@@ -8,24 +8,24 @@
     font-size: var(--fz-300);
 
     background-color: transparent;
-    color: var(--color-primary-darker);
+    color: var(--color-primary-900);
 
     display: grid;
     place-content: center;
 
     padding: 0.5rem 1rem;
 
-    border: 1px solid var(--color-primary-darker);
+    border: 1px solid var(--color-primary-900);
     border-radius: 999px;
 
     cursor: pointer;
     transition: var(--animation-duration-fast) ease-in-out;
     transition-property: background-color, color;
 
-    box-shadow: var(--shadow-400);
+    box-shadow: var(--shadow-300);
 
     &:hover {
-      background-color: var(--color-primary-darker);
+      background-color: var(--color-primary-900);
       color: var(--color-primary-opposite);
     }
 
