--- a/src/app/search/components/filter-summary/filter-summary.module.css
+++ b/src/app/search/components/filter-summary/filter-summary.module.css
@@ -6,9 +6,9 @@
   border-radius: var(--border-radius);
 
   padding: 1rem;
-  background-color: var(--color-gray-20);
+  background-color: var(--color-surface);
 
-  box-shadow: var(--shadow-700);
+  box-shadow: var(--shadow-500);
 
   .title {
     grid-area: title;
@@ -21,7 +21,7 @@
     justify-self: flex-end;
 
     background-color: var(--color-danger);
-    color: var(--color-danger-fade);
+    color: var(--color-danger-opposite);
 
     padding: 0.25rem 0.75rem;
 
@@ -48,12 +48,11 @@
       align-items: center;
       gap: 0.5rem;
 
-      background-color: var(--color-gray-70);
-      color: var(--color-gray-16);
+      background-color: var(--color-surface-muted);
+      color: var(--color-text-muted);
 
       padding: 0.25rem 0.75rem;
 
-      border: 1px solid currentColor;
       border-radius: 999px;
 
       font-size: var(--fz-300);
@@ -66,7 +65,7 @@
 
       &:hover {
         background-color: var(--color-danger);
-        color: var(--color-danger-fade);
+        color: var(--color-danger-opposite);
 
         border-color: var(--color-danger);
       }
