--- a/src/components/activity-card/activity-card.module.css
+++ b/src/components/activity-card/activity-card.module.css
@@ -1,10 +1,12 @@
 .activity-card {
-  background-color: var(--color-gray-40);
+  background-color: var(--color-surface);
 
+  border: 1px solid var(--color-border);
   border-radius: var(--border-radius);
+
   aspect-ratio: 1/1;
 
-  box-shadow: var(--shadow-700);
+  box-shadow: var(--shadow-400);
 
   .visuals {
     display: grid;
@@ -30,8 +32,8 @@
       grid-row: 1;
       justify-self: end;
 
-      background-color: hsl(338deg 10% 80%);
-      color: var(--color-black);
+      background-color: var(--color-zinc-800);
+      color: var(--color-zinc-100);
 
       block-size: max-content;
 
@@ -101,8 +103,8 @@
       align-items: center;
       gap: 0.5rem;
 
-      background-color: var(--color-gray-93);
-      color: var(--color-gray-16);
+      background-color: var(--color-primary);
+      color: var(--color-primary-opposite);
 
       border: none;
       border-radius: var(--border-radius);
@@ -111,14 +113,20 @@
 
       cursor: pointer;
 
-      transition: var(--animation-duration-normal) ease-in-out;
+      transition: var(--animation-duration-fast) ease-in-out;
       transition-property: background-color, color;
 
       &:hover,
       &:focus {
-        background-color: var(--color-primary-darker);
-        color: var(--color-primary-opposite);
+        background-color: var(--color-primary-700);
       }
     }
+  }
+
+  transition: var(--animation-duration-normal) ease-in-out;
+  transition-property: all;
+
+  &:hover {
+    box-shadow: var(--shadow-800);
   }
 }
