--- a/src/components/global-search-box/global-search-box.module.css
+++ b/src/components/global-search-box/global-search-box.module.css
@@ -4,12 +4,14 @@
   gap: 0.5rem;
   inline-size: min(50rem, 100%);
 
+  background-color: var(--color-surface);
+
   border: 1px solid var(--color-border);
   border-radius: 999rem;
 
   padding-inline: 1rem;
 
-  box-shadow: var(--shadow-400);
+  box-shadow: var(--shadow-300);
 
   .search {
     display: flex;
@@ -21,7 +23,6 @@
     flex: 1 1 0;
 
     background-color: transparent;
-    color: var(--color-gray-97);
 
     padding: 1rem;
     border: none;
@@ -46,7 +47,6 @@
       gap: 0.25rem;
 
       background-color: transparent;
-      color: var(--color-gray-99);
       padding: 0.5em 0.5rem 0.5rem 1rem;
 
       border: none;
@@ -61,7 +61,7 @@
         font-size: var(--fz-500);
       }
       &:hover {
-        background-color: var(--color-gray-16);
+        background-color: var(--color-surface-muted);
       }
     }
   }
