--- a/src/app/search/page.module.css
+++ b/src/app/search/page.module.css
@@ -35,6 +35,7 @@
 @media screen and (min-width: 768px) {
   .page {
     grid-template-columns: 1fr 4fr;
+    grid-template-rows: auto auto 1fr;
     grid-template-areas: "search search" "filters toolbar" "filters result";
 
     .mobile-filters {
