--- a/src/app/activity/[id]/components/activity-info/activity-info.module.css
+++ b/src/app/activity/[id]/components/activity-info/activity-info.module.css
@@ -3,9 +3,9 @@
 
   .heading {
     display: flex;
-    align-items: start;
+    align-items: center;
     justify-content: space-between;
-    gap: 0.5rem;
+    gap: 0.75rem;
 
     margin-block-end: 1.5rem;
 
