--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,7 +61,7 @@
   --shadow-800: 0 20px 25px -5px rgb(0 0 0 / 0.1),
     0 8px 10px -6px rgb(0 0 0 / 0.1);
   --shadow-900: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --shadow-perforations: inset 0 4px 6px -2px rgb(0 0 0 / 0.1);
+  --shadow-perforations: inset 0 4px 5px -3px rgb(0 0 0 / 0.1);
 
   --full-width: 75rem;
   --full-width-padding-inline: calc(max(100% - var(--full-width), 2rem) / 2);
@@ -116,6 +116,8 @@ html {
   scroll-behavior: smooth;
   accent-color: var(--color-primary);
   caret-color: var(--color-primary);
+
+  font-family: Vazirmatn, system-ui;
   font-feature-settings: "ss01";
 }
 
